nexus-3.70.1/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-route
  namespace: nexus
spec:
  parentRefs:
  - name: cmp-gateway
    namespace: envoy-gateway-system
  hostnames:
  - nexus.devops.internal
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nexus-nexus-repository-manager
      port: 8081
